# vint64-c

./: .clang-format  .gitignore  .gitmodules  LICENSE-MIT.md  README.md  meson.build  meson_options.txt
c/: vint64.c  vint64.h
c++/: vint64.cpp  vint64.hpp
tests/: decode.c  encode.c
